	changeable textures for BTR-60 (http://dev.withsix.com/issues/67747)

Fixed:
	inconsistency with M249 variants accepting magazines (http://dev.withsix.com/issues/66695)
	FN FAL wrong fire rate (http://dev.withsix.com/issues/68114)
	CfgVehicles - threat of MTVR faulty (http://dev.withsix.com/issues/69133)
	CfgWeapons - wrong config value naming in M60A4_EP1 (http://dev.withsix.com/issues/69186)
	"Bitter Chill" campaign mission bug (http://forums.bistudio.com/showthread.php?170392-Bitter-Chill-Mystery&p=2870710&viewfull=1#post2870710)
	two "Undefined variable ..." errors on Shapur_BAF and Zargabad intro scenes


09/02/2015

Fixed:
	CorePatch error on accessing campaigns


07/02/2015

Fixed:
	Javelin FLIR view (http://dev.withsix.com/issues/69143)
	BMP-2 HQ Taki with only 2 smoke shells compared to 6 smoke shells like on BMP-2 HQ CDF/Ins (http://dev.withsix.com/issues/71144)
	"Bitter Chill" campaign mission bug (http://forums.bistudio.com/showthread.php?170392-Bitter-Chill-Mystery&p=2870710&viewfull=1#post2870710)
	some more "Undefined variable ..." errors of BIS Warfare Module
	BIS SP Mission "Bear Rising"
	main menu slow loading (thanks to OMAC)

Improved:
	Javelin CLU with improvements from Anzins mod with permissions by Defunkt
	now M249 can use the "200Rnd_556x45_L110A1" magazine from BAF


20/01/2015

Fixed:
	few bugs of BIS SP Mission "Eye For Eye"
	error "Cannot load sound 'ca\dubbing\global\radio\male01\ru\hesdowne.wss'"
	RPT warnings in ca\communityconfigurationproject_e\gameplay_fixedat1model\p3d\ccp_at1.p3d:shadow(1000)
	BIS SP Mission "Littlebird"
	optics modes of M4A1_HWS_GL and M4A1_HWS_GL_camo


07/01/2015

Fixed:
	several choppers and planes are missing lockDetectionSystem and incommingMissileDetectionSystem (http://dev.withsix.com/issues/67317)
	two regressions from previous version of CorePatch (thanks to OpusFmSPol for feedback)


19/12/2014

Fixed: